Bug 75642 - vlookup returns #NA for all lookups
Summary: vlookup returns #NA for all lookups
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: regression
: 76482 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-01 15:11 UTC by Larry
Modified: 2016-09-09 12:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (45.31 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-03-01 21:19 UTC, Larry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Larry 2014-03-01 15:11:00 UTC
vlookup always returns #NA; the same problem does not occur with 4.1.5.3-1.  The following macro 'VLOOKUP(C10,ProvidersTable,2)' fails 100% of the time and troubleshooting the problem caused several crashes, one reproted separately.

'VLOOKUP(C10,$Providers.$A$2:$D$100,2)' also fails.  The spreadsheet is one that I've used for a long time with earlier versions and now fails.
Comment 1 Jean-Baptiste Faure 2014-03-01 20:04:14 UTC
Please, attach a test document.

Best regards. JBF
Comment 2 Larry 2014-03-01 21:19:21 UTC
Created attachment 94938 [details]
Sample document

I thought I attached this...my bad.
Comment 3 David Clayton 2014-03-06 15:32:12 UTC
Hi Larry, 

I filed a bug (74622) for a similar issue experienced when referencing data pasted into cells. This has been fixed, but I haven't seen it come through yet, I'm hoping to see it in 4.2.2.

David
Comment 4 Jean-Baptiste Faure 2014-03-08 21:31:12 UTC
Indeed, works in version 4.1.5, does not work in version (dev.) 4.2.3.0.0+ under Linux / Ubuntu 13.10 x86-64

Best regards. JBF
Comment 5 Kohei Yoshida 2014-03-13 13:09:42 UTC
I'll take it.
Comment 6 Kohei Yoshida 2014-03-13 13:42:59 UTC
Found the error. Will work on a fix.
Comment 7 Commit Notification 2014-03-13 14:26:34 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e5802954853a9ec64fb5fec917f8c3b2daba6526

fdo#75642: Add test case for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-03-13 14:26:48 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c078d5fef98ba77751b7a9593691d88dfc1c9ba1

fdo#75642: Check the high position block correctly.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-03-13 14:27:41 UTC
4.2 backport: https://gerrit.libreoffice.org/8573
Comment 10 Commit Notification 2014-03-13 15:43:04 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6293d898c16bafeb703129ed0d33857934ab1dfb&h=libreoffice-4-2

fdo#75642: Check the high position block correctly.


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2014-03-13 15:45:37 UTC
Fixed.
Comment 12 Commit Notification 2014-03-18 21:58:56 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4bba09ba98cfa40d559f98aaf8ae4730c6f075a&h=libreoffice-4-2-3

fdo#75642: Check the high position block correctly.


It will be available already in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 m.a.riosv 2014-03-18 23:15:56 UTC
Thanks Kohei.
Verified Win7x64:
Version: 4.2.4.0.0+ Build ID: e1823627f35e4419880769fdd05acddbd0a9c25c
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-03-18_14:25:19
Version: 4.3.0.0.alpha0+ Build ID: 12ae7672f285da1d4c730315e8db23b3396b71cc
   TinderBox: Win-x86@39, Branch:master, Time: 2014-03-14_00:18:00
Comment 14 m.a.riosv 2014-03-22 20:33:08 UTC
*** Bug 76482 has been marked as a duplicate of this bug. ***
Comment 15 Larry 2014-03-23 15:20:05 UTC
Sorry for the delay testing.  I tried the same test spreadsheet attached and have the same results with 4.2.3.1.
Comment 16 Jean-Baptiste Faure 2014-03-23 19:09:42 UTC
For me the bug is fixed in version 4.2.4.0.0+

Best regards. JBF
Comment 17 Larry 2014-03-23 19:23:03 UTC
Go it.  I misunderstood that it was in 4.2.3.  I will confirm when I can test with 4.2.4.

Thanks for the help.
Comment 18 Jean-Baptiste Faure 2014-03-23 21:26:04 UTC
(In reply to comment #17)
> Go it.  I misunderstood that it was in 4.2.3.  I will confirm when I can
> test with 4.2.4.

No, the fix is in 4.2.3 branch but it is newer than 4.2.3 RC1, it will be in the RC2 (4.2.3.2).
https://gerrit.libreoffice.org/gitweb?p=core.git;a=shortlog;h=refs/heads/libreoffice-4-2-3

Set back to FIXED.

Best regards. JBF
Comment 19 Larry 2014-04-04 15:37:56 UTC
Confirmed.  The bug is corrected in 4.2.3.2-3.

Thanks.
Comment 20 Alex Thurgood 2016-09-09 12:30:40 UTC
*** Bug 101988 has been marked as a duplicate of this bug. ***