fdo#75642: Check the high position block correctly.

Change-Id: I25deabf69e78c6e0354e8a528ab88891a30f9aec